<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintEnd_toStartOf="parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/currency_exchange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/b" />

    <TextView
        android:id="@+id/textViewCurrency"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="180dp"
        android:text="@string/currency"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/input"
        android:ems="10"
        android:hint="@string/amount"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textViewAmount"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCurrency" />

    <Spinner
        android:id="@+id/spinnerCurrency"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toEndOf="@+id/textViewCurrency"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewAmount"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCurrency" />

    <Button
        android:id="@+id/buttonConvert"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:text="@string/convert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAmount" />

    <TextView
        android:id="@+id/textViewRes"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConvert" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toEndOf="@+id/textViewRes"
        app:layout_constraintTop_toBottomOf="@+id/buttonConvert" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:foreground="@drawable/f"
        android:contentDescription="@string/setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewResult" />
</androidx.constraintlayout.widget.ConstraintLayout>