<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <TextView
        android:id="@+id/textViewFontSize"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/Font_Size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSetting" />

    <TextView
        android:id="@+id/textViewSetting"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="50dp"
        android:text="@string/setting"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextFontSize"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/Font_Size"
        android:autofillHints="@string/Font_Size"
        android:inputType="numberSigned"
        app:layout_constraintStart_toEndOf="@+id/textViewFontSize"
        app:layout_constraintTop_toBottomOf="@+id/textViewSetting" />

    <TextView
        android:id="@+id/textViewSP"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:text="@string/sp"
        app:layout_constraintStart_toEndOf="@+id/editTextFontSize"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewFontColor"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/Font_Color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFontSize" />

    <Spinner
        android:id="@+id/spinnerColor"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:entries="@array/array_color"
        app:layout_constraintStart_toEndOf="@+id/textViewFontColor"
        app:layout_constraintTop_toBottomOf="@+id/editTextFontSize" />

    <Button
        android:id="@+id/buttonApply"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/apply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFontColor" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toEndOf="@+id/buttonApply"
        app:layout_constraintTop_toBottomOf="@+id/spinnerColor" />
</androidx.constraintlayout.widget.ConstraintLayout>